# C-Cpp

ex1/: CMakeLists.txt  README.md  bulshit.cpp  cipher.c  main.c  out.txt  tests.c
ex2/: CMakeLists.txt  ProductBST.c  ProductBST.h  README.md  computers.txt  main.c
ex3/: CMakeLists.txt  README.md  linked_list.h  markov_chain.c  markov_chain.h  some_words.txt  tweets_generator.c
ex3b/: CMakeLists.txt  README.md  justdoit_tweets.txt  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders  snakes_and_ladders.c  tweets_generator  tweets_generator.c
ex4/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  oh_tests_const.cpp  oh_tests_exceptions-2.cpp  oh_tests_exceptions.cpp  tests.cpp
ex5/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RSUser.cpp  RSUser.h  RSUsersLoader.cpp  RSUsersLoader.h  RecommenderSystem.cpp  RecommenderSystem.h  RecommenderSystemLoader.cpp  RecommenderSystemLoader.h  presubmit.cpp  print_main.cpp  test.cpp
ex5/ex6_tests/: Makefile  README.docx
ex6/: CMakeLists.txt  Dictionary.hpp  HashMap.cpp  HashMap.hpp  Presubmit.hpp  Presubmit_2.hpp  README.md  gr  prsb  run  test_ex6.cpp  tests.cpp  tests_ex6_suchetzky.cpp
