cmake_minimum_required(VERSION 3.16.3)
project(ex6-aaa997)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(ex6-aaa997
        HashMap.hpp
        Dictionary.hpp
#        HashMap.cpp
#        tests.cpp
#        tests_ex6_suchetzky.cpp
#        test_ex6.cpp
        presubmit.cpp
        )

